<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.ejemploandroidtta.ejemploandroidtta.EvaluationActivity"
    android:orientation="vertical"
    android:label="R">


  <TextView
      android:id="@+id/menu_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="20dp"
      android:text="Bienvenido John Doe"/>

    <TextView
        android:id="@+id/lesson_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:text="Lección 1: Introducción"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button"
        android:onClick="test" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_button"
        android:onClick="exercise" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitoring_button"
        android:onClick="monitoring" />

    


</LinearLayout>
